# WhoIsSharp

./: .gitignore  CLAUDE.md  Cargo.toml  DOC.md  README.md
.github/workflows/: test.yaml
src/: agent.rs  cache.rs  config.rs  demo.rs  fred.rs  http.rs  main.rs  mcp.rs  news.rs  pairs.rs  portfolio.rs  research.rs  risk.rs  signals.rs  simulation.rs  tools.rs  tui.rs
src/llm/: anthropic.rs  claude_headless.rs  codex_headless.rs  gemini.rs  mod.rs  openai.rs
src/markets/: kalshi.rs  mod.rs  polymarket.rs
