[package]
name = "whoissharp"
version = "0.1.0"
edition = "2021"
description = "WhoIsSharp — AI-powered TUI for prediction market analysis"

[[bin]]
name = "whoissharp"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (rustls — no OpenSSL dependency)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Terminal UI
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures-util = "0.3"

# Async trait objects
async-trait = "0.1"

# Error handling
anyhow = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# JWT signing for Gemini Vertex AI service-account auth
jsonwebtoken = "9"

# Home-directory resolution (portfolio persistence)
dirs-next = "2"
